examples/errors/combine.sea
/////////////////////////////////////////////
// combine
// - This application uses one banked array as input,
// one banked array as output, regular banking with each
// unroll accessing two banks, overlapping with other accesses. 
////////////////////////////////////////////

func madd(a: float[1056 bank(32)], c: float[1024 bank(32)]) {

  for (let i = 0..1023) unroll 32 {
    c[i] := a[i] + a[i+1];
  }

}
